<resources>
    <string name="app_name">WinWin</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="pinjaman">Pinjaman</string>
    <string name="jumlah_pinjaman">Jumlah Pinjaman</string>
    <string name="periode_pinjaman">Periode Pinjaman</string>
    <string name="bunga_biaya">Bunga / Biaya</string>
    <string name="jatuh_tempo">Jatuh Tempo</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="pinjam_sekarang">Pinjam Sekarang</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="kode_verifikasi">Kode Verifikasi</string>
    <string name="password">Password</string>
    <string name="confim_password">Konfirmasi Password</string>
    <string name="syarat_ketentuan">Syarat &amp; Ketentuan</string>
    <string name="kebijakan_privasi">Kebijakan Privasi</string>
    <string name="menyetujui">Menyetujui</string>
    <string name="pendaftaran">Pendaftaran</string>
    <string name="form_pengajuan">Form Pengajuan</string>
    <string name="pengajuan">Pengajuan</string>
    <string name="nilai_pinjam">Nilai Pinjam</string>
    <string name="jangka_pinjam">Jangka Pinjam</string>
    <string name="kupon_diskon">Kupon Diskon</string>
    <string name="cek_validasi">Cek Validasi</string>
    <string name="data_pribadi">Data Pribadi</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="nama_ktp">Nama KTP</string>
    <string name="no_ktp">Nomor KTP</string>
    <string name="tgl_lahir">Tanggal Lahir</string>
    <string name="alamat_pelanggan">Alamat Pelanggan</string>
    <string name="kode_pos">Kode Pos</string>
    <string name="status_rumah">Status Rumah</string>
    <string name="telepon_rumah">Telepon Rumah</string>
    <string name="handphone">Handphone</string>
    <string name="data_pekerjaan">Data Pekerjaan</string>
    <string name="jenis_pekerjaan">Jenis Pekerjaan</string>
    <string name="nama_perusahaan">Nama Perusahaan</string>
    <string name="posisi">Posisi</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="lama_bekerja">Lama Bekerja</string>
    <string name="nama_hrd">Nama HRD Perusahaan</string>
    <string name="alamat_perusahaan">Alamat Perusahaan</string>
    <string name="telepon_perusahaan">Telepon Perusahaan</string>
    <string name="batas_kontrak">Batas Kontrak</string>
    <string name="gaji_perbulan">Gaji Perbulan</string>
    <string name="tgl_gajian">Tanggal Gajian</string>
    <string name="data_keluarga_tdk_serumah">Data Keluarga Tidak Serumah</string>
    <string name="nama">Nama</string>
    <string name="hubungan_keluarga">Hubungan Keluarga</string>
    <string name="alamat">Alamat</string>
    <string name="data_rekening">Data Rekening</string>
    <string name="tujuan_pinjam">Tujuan Pinjam</string>
    <string name="nama_bank">Nama Bank</string>
    <string name="cabang_bank_dikota">Cabang Bank di Kota</string>
    <string name="nama_pemilik_rekening">Nama Pemilik Rekening</string>
    <string name="nomor_rekening">Nomor Rekening</string>
    <string name="upload_foto_anda">Upload Foto Anda</string>
    <string name="choose_file">Choose File</string>
    <string name="no_file">No File</string>
    <string name="upload_ktp_anda">Upload KTP Anda</string>
    <string name="upload_slip_gaji_anda">Upload Slip Gaji Anda (3 Bulan, termasuk bulan terakhir atau SKP</string>
    <string name="upload_buku_rekening">Upload Buku Rekening</string>
    <string name="submit">Submit</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="login_success">Login Berhasil</string>
    <string name="create_account">Create Accoung</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="silahkan_ajukan">Silahkan, Ajukan pinjaman sekarang juga!</string>
    <string name="jumlah_yg_anda_kihat">Jumlah yang anda lihat adalah yang anda bayar kembali. Bunga lebih kompetitif. Repeat customer mendapat bunga s/d 50%</string>
    <string name="home">Home</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="statuspinjaman">Status Pinjaman</string>
    <string name="history_pengajuan">History Pengajuan</string>
    <string name="contact">Contact</string>
    <string name="syarat_dan_ketentuan">Syarat dan Ketentuan</string>
    <string name="how_it_work">How It Works</string>
    <string name="bayar">Request Bayar Sebagian</string>
    <string name="request">Request Code Bayar</string>
    <string name="logout">Log Out</string>
    <string name="segera_disurvey">Anda akan segera disurvey oleh tim kami</string>
    <string name="bagian">Bagian</string>
    <string name="tanggal">Tanggal</string>
    <string name="notifikasi_kosong">Anda Belum Memiliki Notifikasi</string>
    <string name="status">Status</string>
    <string name="keterangan">Keterangan</string>
    <string name="pilih_tgl">Pilih Tanggal</string>
    <string name="apply">Apply</string>
    <string name="voice_call">Voice Call</string>
    <string name="pengajuan_kosong">Anda Belum Memiliki History Pengajuan</string>
    <string name="kota">Kota</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="lama_tahun">Lama Tinggal (Tahun)</string>
    <string name="lama_bulan">Lama Tinggal (Bulan)</string>
    <string name="status_kerja">Status Kerja</string>
    <string name="nama_klg_serumah">Nama Keluarga Serumah</string>
    <string name="no_telp_klg_serumah">Nomor Telepon Keluarga Serumah</string>
    <string name="nama_klg_tdk_serumah">Nama Keluarga Tidak Serumah</string>
    <string name="no_telp_klg_tdk_serumah">Nomor Telepon Keluarga Tidak Serumah</string>
    <string name="alamat_klg_tdk_serumah">Alamat Keluarga Tidak Serumah</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lipsum">Long long time ago, there lived a great king in Bengkulu. His name is king Ratu Agung. He ruled Sungai Serut Kingdom for years and during those years, the people in the kingdom live peacefully and prosperous. The king has seven children. The last child was the only daughter in the family and her name is Putri Gading Cempaka.

Putri Gading Cempaka was very beautiful and kind. There were so many noble man came to their kingdom to propose the princess but her father, king Ratu Agung, refused all of them because for him Putri Gading Cempaka was still too young to get married.

One day, the king summon all of his children into his room. At that moment he was so weak and he said to all of them “My children, I think my time has come to leave you. I hope you all can keep your relationship as brother and sister. I have two important message that I want to tell you before I die. First, I appointed Anak Dalam as my sixth son to be the next king of our kingdom. I hope you all can accept my decision. Second, if a big disaster ever happened on this land and you think that there is nothing you can do to save it, go to Bungkuk mountain and stay there. Wait until a great king came to propose my daughter”. All of his children listened to his message carefully. None of them complained about it. A couple days later, the king passed away.</string>
    <string name="settings_name">AppRTC Settings</string>
    <string name="disconnect_call">Disconnect Call</string>
    <string name="room_names">Room names:</string>
    <string name="room_description">
        Please enter a room name. Room names are shared with everyone, so think
        of something unique and send it to a friend.
    </string>
    <string name="connect_text">Connect</string>
    <string name="invalid_url_title">Invalid URL</string>
    <string name="invalid_url_text">The URL or room name you entered resulted in an invalid URL: %1$s
    </string>
    <string name="channel_error_title">Connection error</string>
    <string name="connecting_to">Connecting to: %1$s</string>
    <string name="missing_url">FATAL ERROR: Missing URL to connect to.</string>
    <string name="ok">OK</string>
    <string name="switch_camera">Switch front/back camera</string>
    <string name="toggle_debug">Toggle debug view</string>
    <string name="add_room_description">Add new room to the list</string>
    <string name="remove_room_description">Remove room from the list</string>
    <string name="connect_description">Connect to the room</string>
    <string name="connect_loopback_description">Loopback connection</string>
    <string name="pref_room_key">room_preference</string>
    <string name="pref_room_list_key">room_list_preference</string>
    <string name="pref_videosettings_key">video_settings_key</string>
    <string name="pref_videosettings_title">WebRTC video settings.</string>
    <string name="pref_videocall_key">videocall_preference</string>
    <string name="pref_videocall_title">Video call.</string>
    <string name="pref_videocall_dlg">Enable video in a call.</string>
    <string name="pref_videocall_default">true</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Video resolution.</string>
    <string name="pref_resolution_dlg">Enter AppRTC local video resolution.</string>
    <string name="pref_resolution_default">Default</string>
    <string name="pref_fps_key">fps_preference</string>
    <string name="pref_fps_title">Camera fps.</string>
    <string name="pref_fps_dlg">Enter local camera fps.</string>
    <string name="pref_fps_default">Default</string>
    <string name="pref_capturequalityslider_key">capturequalityslider_preference</string>
    <string name="pref_capturequalityslider_title">Capture quality slider.</string>
    <string name="pref_capturequalityslider_dlg">Enable slider for changing capture quality.</string>
    <string name="pref_capturequalityslider_default">false</string>
    <string name="pref_startvideobitrate_key">startvideobitrate_preference</string>
    <string name="pref_startvideobitrate_title">Start video bitrate setting.</string>
    <string name="pref_startvideobitrate_dlg">Start video bitrate setting.</string>
    <string name="pref_startvideobitrate_default">Default</string>
    <string name="pref_startvideobitratevalue_key">startvideobitratevalue_preference</string>
    <string name="pref_startvideobitratevalue_title">Video encoder start bitrate.</string>
    <string name="pref_startvideobitratevalue_dlg">Enter video encoder start bitrate in kbps.</string>
    <string name="pref_startvideobitratevalue_default">1000</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="pref_videocodec_title">Default video codec.</string>
    <string name="pref_videocodec_dlg">Select default video codec.</string>
    <string name="pref_videocodec_default">VP8</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_title">Video codec hardware acceleration.</string>
    <string name="pref_hwcodec_dlg">Use hardware accelerated video codec (if available).</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_capturetotexture_key">capturetotexture_preference</string>
    <string name="pref_capturetotexture_title">Video capture to surface texture.</string>
    <string name="pref_capturetotexture_dlg">Capture video to textures (if available).</string>
    <string name="pref_capturetotexture_default">false</string>
    <string name="pref_value_enabled">Enabled</string>
    <string name="pref_value_disabled">Disabled</string>
    <string name="email">Email</string>
    <string name="chat">Chat</string>
    <string name="janjibayar">Janji Bayar</string>
</resources>