<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_splash"
    android:orientation="vertical"
    android:padding="55dp"
    tools:context="metis.winwin.Login">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_logo" />

    <EditText
        android:id="@+id/txUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_view_abu_login"
        android:drawableLeft="@drawable/accountemail"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUsername"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_password"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/txPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_view_abu_login"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_password"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_view_biru_login"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/id_clients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
