<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/mid_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tanggal"
                android:textColor="@android:color/black" />

            <TextView
                android:textSize="@dimen/mid_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text=":" />

            <TextView
                android:textSize="@dimen/mid_text"
                android:id="@+id/txTanggal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:textSize="@dimen/mid_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/status"
                android:textColor="@android:color/black" />

            <TextView
                android:textSize="@dimen/mid_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text=":" />

            <TextView
                android:textSize="@dimen/mid_text"
                android:id="@+id/txStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textSize="@dimen/mid_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pengajuan"
                android:textColor="@android:color/black" />

            <TextView
                android:textSize="@dimen/mid_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text=":" />

            <TextView
                android:textSize="@dimen/mid_text"
                android:id="@+id/txPengajuan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:textSize="@dimen/mid_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/keterangan"
                android:textColor="@android:color/black" />

            <TextView
                android:textSize="@dimen/mid_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text=":" />

            <TextView
                android:textSize="@dimen/mid_text"
                android:id="@+id/txKeterangan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>
